fix for new notebook button being truncated (#738)

--- a/ui/src/app/views/workspace/component.css
+++ b/ui/src/app/views/workspace/component.css
@@ -45,7 +45,7 @@ h3 {
 
 
 .btn.btn-primary.btn-create {
-  width: 7rem;
+  width: max-content;
 }
 
 
